# BigBrain

./: .gitignore  README.md  environment.yml  pyproject.toml  run_server.sh
.claude/: CLAUDE.md
src/bigbrain/: __init__.py  config.py  context.py  orchestrator.py  server.py
src/bigbrain/models/: __init__.py  base.py  codex.py  gemini.py
tests/: test_codex.py  test_context.py  test_gemini.py  test_orchestrator.py
