[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigbrain"
version = "0.1.0"
description = "Multi-model orchestration MCP server for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2,<3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
